# template-cxx-project

./: .clang-format  .gitignore  CMakeLists.txt  DoxyfileSidebar.css  README.md
app/: CMakeLists.txt  main.cpp
cmake/: BuildDocumentation.cmake  BuildTesting.cmake
include/libname/: lib.hpp
libname/: CMakeLists.txt
libname/include/libname/: lib.hpp
libname/src/: lib.cpp  lib_test.cpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
